<resources>
    <string name="app_name">preyansh-Reflex</string>

    <string name="app_name_menu">REFLEX</string>
    <string name="reaction_time_button">REACTION GAME</string>
    <string name="buzzer_game_button">BUZZER GAME</string>
    <string name="statistics_button">STATISTICS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_multiplayer_menu">Multiplayer Menu</string>
    <string name="multiplayer_mode_header">How Many Players?</string>
    <string name="two_player_button">2 Players</string>
    <string name="three_player_button">3 Players</string>
    <string name="four_player_button">4 Players</string>
    <string name="title_activity_buzzer_game">BuzzerGame</string>
    <string name="Player_1_button">1</string>
    <string name="Player_2_button">2</string>
    <string name="Player_3_button">3</string>
    <string name="Player_4_button">4</string>
    <string name="Single_Player_button_press">Press</string>
    <string name="Play_Again_Button">Play Again?</string>
    <string name="Quit_Button">Quit</string>
    <string name="Email_stats_button">E-mail Statistics</string>
    <string name="Clear_stats_button">Clear Statistics</string>
    <string name="Results_reaction">Your Reaction Time is</string>
    <string name="Popup_menu_Reaction_game">Welcome to Reaction Game, After you Press Play, the Game will begin, you will be prompeted randomely to press the button, Press it as fast as you can! Are you ready? </string>
    <string name="Play_button">Play</string>
    <string name="Quit_button">Main Menu</string>
    <string name="Player_1_Press">Player 1 Pressed First!</string>
    <string name="Player_2_Press">Player 2 Pressed First!</string>
    <string name="Player_3_Press">Player 3 Pressed First!</string>
    <string name="Player_4_Press">Player 4 Pressed First!</string>
    <string name="PLay_again_button">Play Again?</string>
    <string name="Win">WINNER!</string>
    <string name="TooFastPress">Button Pressed too fast!</string>
    <string name="WaitColor">You must wait for the Color to change!</string>
    <string name="Got_it">Got It!</string>
    <string name="YourTimeIs">Your time is</string>
    <string name="Milli">ms</string>

    <string name="title_activity_buzzer_game2_player">BuzzerGame2Player</string>
    <string name="title_activity_buzzer_game_3player">buzzer_game_3player</string>
    <string name="title_activity_buzzer_game3_player">BuzzerGame3Player</string>
    <string name="title_activity_buzzer_game4_player">BuzzerGame4Player</string>
    <string name="title_activity_reaction_game">ReactionGame</string>

    <string name="title_activity_statistics_menu">StatisticsMenu</string>
    <string name="title_activity_multiplayer_game">MultiplayerGame</string>
    <string name="title_activity_reaction_game_results">ReactionGameResults</string>
    <string name="title_activity_popup_before_game">PopupBeforeGame</string>
    <string name="title_activity_dialogue_box_creator">Dialogue_box_creator</string>

    <string name="hello_world">Hello world!</string>
</resources>
