<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#79ff3c">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name_menu"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_marginTop="43dp"
        android:textAlignment="gravity"
        android:layout_weight="0.09"
        android:textSize="80dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reaction_time_button"
        android:layout_marginTop="93dp"
        android:id="@+id/ReactionTimeButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buzzer_game_button"
        android:id="@+id/BuzzerGameButton"
        android:layout_marginTop="53dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics_button"
        android:id="@+id/StatisticsButton"
        android:layout_marginTop="43dp" />
</LinearLayout>
