<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.preyanshu.preyansh_reflex.BuzzerGame4Player">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_1_button"
        android:id="@+id/Player1Button"
        android:layout_marginTop="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_2_button"
        android:id="@+id/Player2Button"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_3_button"
        android:id="@+id/Player3Button"
        android:layout_alignBottom="@+id/Player2Button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_4_button"
        android:id="@+id/Player4Button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/Player1Button"
        android:layout_alignStart="@+id/Player1Button"
        android:layout_marginBottom="46dp" />
</RelativeLayout>
