<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.preyanshu.preyansh_reflex.BuzzerGame3Player"
    android:background="#79ff3c">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_1_button"
        android:id="@+id/player1button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:background="#0009ff"
        android:onClick="Player1Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_2_button"
        android:id="@+id/player2button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/player1button"
        android:layout_alignStart="@+id/player1button"
        android:background="#ff0000"
        android:onClick="Player2Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_3_button"
        android:id="@+id/playerbutton3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:background="#fff900"
        android:onClick="Player3Button" />
</RelativeLayout>
