<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
<<<<<<< HEAD
    tools:context="com.preyanshu.preyansh_reflex.ReactionGameResults">
=======
    tools:context="com.preyanshu.preyansh_reflex.ReactionGameResults"
    android:background="#79ff3c">
>>>>>>> 6a3723ca425bfda620d8cf189afeb40763c8e138

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
<<<<<<< HEAD
        android:text="Large Text"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Play_Again_Button"
        android:id="@+id/PlayAgainButton"
        android:layout_marginBottom="108dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quit_Button"
        android:id="@+id/QuitButton"
        android:layout_alignTop="@+id/PlayAgainButton"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3" />
=======
        android:text="@string/Results_reaction"
        android:id="@+id/Reaction_Time_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/NumberResult"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
>>>>>>> 6a3723ca425bfda620d8cf189afeb40763c8e138
</RelativeLayout>
